--- a/notes/1.hello_world.md
+++ b/notes/1.hello_world.md
@@ -11,3 +11,12 @@ Here, fn main() is the entry point of the program. It is a function that takes n
 println!("Hello, world!"); -> Here println is the fn name, "!" shows that its a **macro** function and () are to send args and arg sent is a string literal.
 
 ### **Macros** mean it is a special function that can be used to perform certain operations without having to write a lot of code. Macros are expanded at compile time, allowing for more flexibility and power in the language.
+
+# Now initialize a new rust project but this time using cargo
+Run this
+```bash
+cargo new 2.cargo --name cargo
+```
+This will create a new directory named 2.cargo with a Cargo.toml file and a src directory containing a main.rs file.
+
+The main.rs is same as we did earlier, but Cargo.toml is a configuration file for the project. It contains metadata about the project, such as its name, version, and dependencies. The dependencies in rust are called as crates. They are used to add functionality to your project. They can be added by adding them to the [dependencies] section of the Cargo.toml file.
