guessing game documentation, forgot to push previously, sry

--- a/notes/1.hello_world.md
+++ b/notes/1.hello_world.md
@@ -1,3 +1,8 @@
+# To update ur rust compiler, run
+```bash
+rustup update
+```
+
 # So after the installation of rustc and cargo, write the hello world funtion
 
 ```rust
