added random number generation

--- a/notes/2.cargo_indepth.md
+++ b/notes/2.cargo_indepth.md
@@ -37,5 +37,10 @@ cargo build --release
 ```
 
 
+## To get documentation for a crate that is specific for only the packages that are installed, run
+```bash
+cargo doc --open
+```
+
 
 # More cargo commands can be explored here [link](https://doc.rust-lang.org/cargo/)
