--- a/notes/3.guessing_game.md
+++ b/notes/3.guessing_game.md
@@ -34,3 +34,34 @@ fn main() {
 
 ## And the arg we are sending is **&mut guess**. **&mut** is used to pass a mutable reference(addresses are also immutable by default) to a variable. **&** is used to pass a reference to a variable.
 ## And **.expect("Failed to read number");** is error handler which handles the error if the user input is not a number.
+
+
+## read_line() function returns what the user enters into the string and also it returns a Result type (Enum) which is either Ok or Err. If it's Ok then it returns the number of bytes read and if it's Err then it returns the error.
+
+## println! with flower braces, it can be used in two ways-
+- ### println!("Guessed number is {guess}"); => Guessed number is 12 (for eg)
+- ### println!("Guessed number is {}", guess); => Guessed number is 12 (for eg)
+
+# Now for next part we add random number guessing, for that update cargo.toml and add rand = "0.8.5"
+# And then code additions are :
+```rust
+use rand::Rng;
+fn main() {
+    let secret_number = rand::thread_rng().gen_range(1..=100);
+    println!("The secret number is: {secret_number}");
+}
+```
+
+## Now here, rand is an external package, in rust external packages are called crates. So, rand is a crate. Rng is a trait, treat it as a blackbox for now.
+
+## rand::thread_rng() is a function which returns a random number generator. But it has infinite range, so to fix it, we use gen_range fn
+
+## gen_range() takes two arguments, the lower bound and the upper bound. But since upper bound is exclusive, we either have to send it as **1..101** or **1..=100**.
+## Wherein, 1.. means starting from 1 all next numbers, and =100 means from until 100 and including 100.
+
+### Examples :
+- 1..5 => 1, 2, 3, 4
+- 1..=5 => 1, 2, 3, 4, 5
+- ..5 => 0, 1, 2, 3, 4 (nothing means from 0)
+- 1.. => 1, 2, 3, ....(infinity)
+- ..=5 => 0, 1, 2, 3, 4, 5
