added guess and secret comparison logic

--- a/notes/3.guessing_game.md
+++ b/notes/3.guessing_game.md
@@ -65,3 +65,23 @@ fn main() {
 - ..5 => 0, 1, 2, 3, 4 (nothing means from 0)
 - 1.. => 1, 2, 3, ....(infinity)
 - ..=5 => 0, 1, 2, 3, 4, 5
+
+
+# Now let's add another package called cmp, new code additions are:
+```rust
+use std::cmp::Ordering;
+fn main() {
+    let guess : i32 = guess.trim().parse().expect("Please enter a number");
+    match guess.cmp(&secret_number){
+        Ordering::Less => println!("Too small"),
+        Ordering::Greater => println!("Too big"),
+        Ordering::Equal => println!("You win!"),
+    }
+}
+```
+
+## here cmp is a new package with Ordering as an enum. It has three variants: Less, Greater, and Equal.
+# In rust we can **override** any variable with new data, here guess was already initialized as string, but we have changed it to i32.
+
+## Now while re-initializing, :i32 says that the number is 32-bit integer, and trim() removes whitespaces from the string, and parse() removes that extra "\n" that we get from the input.
+## Then we use **match** to compare the guess with the secret number. Then we give respective output based on the comparison.
