final code with a loop, error handling, etc done for guessing_game

--- a/notes/3.guessing_game.md
+++ b/notes/3.guessing_game.md
@@ -85,3 +85,49 @@ fn main() {
 
 ## Now while re-initializing, :i32 says that the number is 32-bit integer, and trim() removes whitespaces from the string, and parse() removes that extra "\n" that we get from the input.
 ## Then we use **match** to compare the guess with the secret number. Then we give respective output based on the comparison.
+
+
+# Now for final part, we put entire actual logic inside a loop and also did a typecasing, error handling.
+# Here is the final code :
+```rust
+use std::io::stdin;
+use std::cmp::Ordering;
+
+use rand::Rng;
+
+fn main() {
+    println!("Guess the number");
+    let secret_number = rand::thread_rng().gen_range(1..=100);
+
+    loop {
+        println!("Enter a number");
+
+        let mut guess = String::new();
+
+        stdin()
+        .read_line(&mut guess)
+        .expect("Failed to read number");
+
+        let guess : i32 = match guess.trim().parse() {
+            Ok(num) => num,
+            Err(_) => continue,
+        };
+
+        match guess.cmp(&secret_number){
+            Ordering::Less => println!("Too small"),
+            Ordering::Greater => println!("Too big"),
+            Ordering::Equal => {
+                println!("You win!");
+                break;
+            },
+        }
+    }
+}
+```
+
+
+## In rust, loops are called loop (as far as I know currently, let's see if this changes.)
+## In rust we can **re-initialize** any variable with new data, here guess was already initialized as string, but we have changed it to i32.
+## **match** is a control flow construct that allows you to match a value against a set of patterns and execute code based on the match.
+## Here it is used 2 different ways, one for error handling and another for comparison.
+## Later in comparison, the Ordering is an enum that represents the result of a comparison between two values.
