match keyword in rust

--- a/notes/11.Structs.md
+++ b/notes/11.Structs.md
@@ -71,6 +71,8 @@ fn main() {
 
 ## As you can see, we don't have to define the variable name for the fields of a struct. We can just use the values directly. Such structs are called tuple structs. They are useful when we want to group data together without having to define a custom type.
 
+### The tuple without any values has a special name, unit. This value and its corresponding type are both written () and represent an empty value or an empty return type. Expressions implicitly return the unit value if they don’t return any other value.
+
 ## Unit like structs
 ```rust
 struct AlwaysEqual;
