if let and let else keywords in rust

--- a/notes/15.MatchKeyword.md
+++ b/notes/15.MatchKeyword.md
@@ -64,3 +64,12 @@ match dice_roll {
     _ => println!("You lose!"), // here _ is used as a catch all pattern
 }
 ```
+
+# If we don't want to do anything for rest of possibilities, we can use **empty tuples** here:
+```rust
+match dice_roll {
+    3 => println!("You win!"),
+    7 => println!("You can retry!"),
+    _ => (),
+}
+```
