added official docs link for strings

--- a/notes/23.Strings.md
+++ b/notes/23.Strings.md
@@ -105,3 +105,5 @@ for word in hello.split_whitespace() { // if "\n" is detected, its split into a 
     println!("{}", word);
 }
 ```
+
+## For more info, visit official documentation: [link](https://doc.rust-lang.org/std/string/struct.String.html)
